--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <h2>About</h2>
         <h3>Hi! I'm Pete Thinkful</h3>
         <article>
-          <div>
+          <section>
             <img class="image-circle" src="images/pete-thinkful.png" alt="Pete Thinkful"/>
-          </div>
+          </section>
           <p>I'm an artist living in Denver, Colorado.</p>
           <p>As an artist, I'm interested in:</p>
           <ul>
@@ -54,23 +54,23 @@
         
         <article id="portfolio">
           <h2>Portfolio</h2>
-          <div>
+          <section>
             <h3>Abstract Red</h3>
             <img src="images/abstract-red.png" alt="Abstract Red Painting"/>
             <p>Vaporware wayfarers heirloom neutra disrupt. Activated charcoal waistcoat scenester hell of.</p>
-          </div>
-          <div>
+          </section>
+          <section>
             <h3>Spiral Zany</h3>
             <img src="images/spiral-zany.png" alt="Spiral Painting"/>
             <p>Sriracha portland taxidermy cronut messenger bag, vegan
 distillery. Vaporware kickstarter air plant mumblecore food truck.</p>
-          </div>
-          <div>
+          </section>
+          <section>
             <h3>Melted Rainbow</h3>
             <img src="images/melted-rainbow.png" alt="Melted Rainbow Painting"/>
             <p>Edison bulb single-origin coffee snackwave, actually ennui
 locavore shabby chic forage.</p>
-          </div>
+          </section>
         </article>
 
         <hr />
